<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright 2015 Adam Feinstein

    This file is part of Selfr.

    Selfr is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Selfr is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Selfr.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_name">Selfr</string>
    <string name="photo_library">Photo Library</string>
    <string name="flash_setting">Flash Setting</string>
    <string name="camera_switch">Camera Switch</string>
    <string name="permission_failure">Can\'t take selfies without permission!</string>
    <string name="no_stick_warning">Please Attach Selfie Stick</string>
    <string name="about_message">
        Source code available on &lt;a href="https://github.com/AEFeinstein/Selfr"&gt;GitHub&lt;/a&gt;.&lt;br&gt;&lt;br&gt;
        Program licenced under the &lt;a href="http://www.gnu.org/licenses/gpl.html"&gt;GNU General Public License v3+&lt;/a&gt;.&lt;br&gt;&lt;br&gt;
        Media licenced under the &lt;a href="http://creativecommons.org/licenses/by-sa/3.0/"&gt;Creative Commons Attribution-ShareAlike 3.0 Unported License&lt;/a&gt;.&lt;br&gt;&lt;br&gt;
    </string>
    <string name="stick_error">ERROR: Try Reconnecting Stick</string>
    <string name="display_value_key">display_value</string>
    <string name="display_value_title">Display Button Value</string>
    <string name="display_value_summary">Useful for calibrating, enabling this displays the analog button value in real time.</string>
    <string name="threshold_key">threshold_key</string>
    <string name="threshold_title">Button Detection Level</string>
    <string name="threshold_summary">When the analog button value is higher than this value, a picture will be taken.</string>
    <string name="preferences_title">Preferences</string>
    <string name="default_threshold">1000</string>
    <string name="about">About</string>
</resources>
