<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright 2015 Adam Feinstein

    This file is part of Selfr.

    Selfr is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Selfr is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Selfr.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/photo_library"
        android:icon="@drawable/ic_photo_library_white_24dp"
        android:title="@string/photo_library"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/flash_setting"
        android:icon="@drawable/ic_flash_off_white_24dp"
        android:title="@string/flash_setting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/camera_switch"
        android:icon="@drawable/ic_camera_front_white_24dp"
        android:title="@string/camera_switch"
        app:showAsAction="ifRoom" />
</menu>